--- a/_seminar/2024-PtX.md
+++ b/_seminar/2024-PtX.md
@@ -33,3 +33,7 @@ Note: MAN ES is 5 min. walk from Metro station Enghave Brygge. Car parking requi
 | 15:00 | **Electrolysis flow simulations** <br> *Pourya Foroogh, Aarhus University* |
 | 15:25 | **CFD, combustion of e-fuels in two-stroke marine engines** <br> *Kar Pang, MAN Energy Solutions* |
 | 15:50 | **Closing remarks** <br> *Knud Erik Meyer, DANSIS chairman, Denmark* |
+
+The event is supported by the Danish Ministry of Higher Education and Science/Uddannelses- og Forskningsministeriet via Energy Cluster Denmark.
+
+![ECD](../images/logo/ecd.png)
