Changed path to ecd logo

--- a/_seminar/2024-PtX.md
+++ b/_seminar/2024-PtX.md
@@ -36,4 +36,4 @@ Note: MAN ES is 5 min. walk from Metro station Enghave Brygge. Car parking requi
 
 The event is supported by the Danish Ministry of Higher Education and Science/Uddannelses- og Forskningsministeriet via Energy Cluster Denmark.
 
-![ECD](../images/logo/ecd.png)
+![ECD](/images/logo/ecd.png)
