Changed path to image in 2024-ptx

--- a/_seminar/2024-PtX.md
+++ b/_seminar/2024-PtX.md
@@ -1,7 +1,7 @@
 ---
 title: "PtX"
 date: 2024-10-09
-image: "images/seminar/blank.png"
+image: "images/seminar/2024-ptx.png"
 venue: "MAN Energy Solutions, Teglholmsgade 41, DK 2450 København SV, Medarbejderhuset/Employee House"
 googleurl: "https://maps.app.goo.gl/Lvr1yYC5powoNpPPA"
 identifier: "1051529"
