Added presentation title/description

--- a/_seminar/2024-PtX.md
+++ b/_seminar/2024-PtX.md
@@ -30,7 +30,7 @@ Note: MAN ES is 5 min. walk from Metro station Enghave Brygge. Car parking requi
 | 13:55 | **Experimental and CFD investigations of flow in electrolyzers** <br> *Casper Schytte Hemmingsen, Stiesdal Hydrogen* |
 | 14:20 | **DANSIS Graduate Award 2024 Ceremony and Presentation** |
 | 14:40 | **Coffee break** |
-| 15:00 | **Electrolysis flow simulations** <br> *Pourya Foroogh, Aarhus University* |
+| 15:00 | **CFD, a tool for understanding of flow in electrolyzers** <br> *Pourya Foroogh, Aarhus University* <br> Alkaline water electrolyzers represent a rich physical problem where multiphase fluid flow, mass transfer, and electrochemical reactions are among the contributing factors. CFD is a tool to shed light on the complex physics of the problem and optimize electrolyzer cells. The present talk introduces an on-going simulation campaign at Aarhus University aiming to understand the two-phase flow in alkaline electroyzers with porous electrodes at both cell and micro (pore and bubble) scales and to improve the performance. |
 | 15:25 | **CFD, combustion of e-fuels in two-stroke marine engines** <br> *Kar Pang, MAN Energy Solutions* |
 | 15:50 | **Closing remarks** <br> *Knud Erik Meyer, DANSIS chairman, Denmark* |
 
